# frobtads

./: .gitignore  CMCommon.cmake  CMFrob.cmake  CMT2Compiler.cmake  CMT3Compiler.cmake  CMTestsuite.cmake  CMakeLists.txt  Common.am  Frob.am  Makefile.am  README  T2Compiler.am  T3CompData.am  T3Compiler.am  Testsuite.am  bootstrap  configure.ac  frob_config.h.in
doc/: AUTHORS  BUGS  COMPILERS  COPYING  ChangeLog  ChangeLog.old  INSTALL  MacOSX  NEWS  README  SRC_GUIDELINES  THANKS
m4/: ax_func_mkdir.m4
src/: colors.h  common.h  debugui.cc  frobappctx.cc  frobappctx.h  frobcurses.h  frobtadsapp.cc  frobtadsapp.h  frobtadsappcurses.cc  frobtadsappcurses.h  frobtadsappplain.h  main.cc  missing.cc  missing.h  oemcurses.c  options.cc  options.h  osbeos.h  oscurses.cc  osdos.h  osfrobtads.h  osos2.h  osportable.cc  osscurses.cc  ost3comp.cc  oswin.h  t2compmain.c  tadswindow.h  teststubs.c
src/wchar/: wchar.h
t2compiler/: Makefile.am
t2compiler/src/: main.c
t2compiler/tads2/: adv.t  dbg.c  emt.c  prs.c  prscomp.c  tok.c
t3compiler/: Makefile.am  Testsuite.am
t3compiler/src/: osportable3.cc
t3compiler/tads3/: std_dbg.cpp  tcerrmsg.cpp  tcerrnum.h  tcgen.h  tcglob.h  tclibprs.cpp  tcmain.cpp  tcmake.cpp  tcmake.h  tcmakecl.cpp  tcpnbase.h  tcpndrv.h  tcprs.h  tcprsnl.cpp  tcprsstm.cpp  tcsrc.h  tct3.h  tct3drv.h  tct3int.h  tct3unas.cpp  tctok.h  tcunas.h  vmbifc.cpp  vmpreini.cpp
t3compiler/tads3/doc/: t3changes.htm
t3compiler/tads3/include/: charset.h  file.h  gramprod.h  lookup.h  strcomp.h  systype.h  tads.h  tadsio.h  tadsiox.h  tok.h
t3compiler/tads3/lib/: file.t  gramprod.t  reflect.t
t3compiler/tads3/lib/adv3/: actor.t  adv3.h  adv3.tl  exec.t  output.t  precond.t  resolver.t  sense.t  settings.t  tips.t
t3compiler/tads3/lib/adv3/en_us/: en_us.t  instruct.t  msg_neu.t
t3compiler/tads3/lib/extensions/: newNames.t  smartAccompany.t
t3compiler/tads3/lib/extensions/TCommand/: TCommand.t
t3compiler/tads3/samples/: sample.t  sample.t3m
t3compiler/tads3/test/: test_chr.cpp  test_comp_obj.cpp  test_exec.cpp  test_link.cpp  test_obj.cpp  test_prs.cpp  test_prs_top.cpp  test_sym.cpp  test_tok.cpp  test_utf8.cpp
t3compiler/tads3/test/data/: bytarr.t  calc.t  inkey.t  intcls.t  listprop.t  rand.t  regex.t  setsc.t  strcomp2.t
t3compiler/testscripts/: README  all_make  test_ex  test_pp  test_restore
tads2/: adv.t  appctx.h  bif.c  bif.h  emt.h  errmsg.c  execmd.c  fio.c  h_ix86.h  h_ix86_64.h  ler.c  ler.h  mch.c  mch.h  mcm.c  mcm.h  mcs.c  obj.c  obj.h  os.h  osgen3.c  osifc.h  osnoui.c  osrestad.c  osstzprs.c  ostzposix.c  output.c  prs.c  regex.c  run.c  run.h  std.t  suprun.c  tadsrsc.c  tadsver.htm  tcd.c  tok.c  tok.h  trd.c  trd.h  (+3 more)
tads3/: LICENSE.TXT  README.TXT  askf_tx3.cpp  charmap.cpp  charmap.h  indlg_tx3.cpp  os_stdio.cpp  osifcnet.cpp  osifcnet.h  rcmain.cpp  resldexe.cpp  resload.cpp  sha2.cpp  std.cpp  std_dbg.cpp  t3_os.h  t3std.h  tcerrmsg.cpp  tcerrnum.h  tcgen.cpp  tcgen.h  tcglob.h  tchostsi.h  tcmain.cpp  tcmake.cpp  tcmake.h  tcmakecl.cpp  tcpnbase.h  tcpndrv.h  tcpnint.h  tcprs.cpp  tcprs.h  tcprs_d.cpp  tcprs_rt.cpp  tcprsfil.cpp  tcprsimg.cpp  tcprsnf.cpp  tcprsprg.cpp  tcprsstm.cpp  tcprstyp.h  (+159 more)
tads3/charmap/: cmaplib.t3r
tads3/derived/: vmuni_cs.cpp
tads3/doc/: index.htm  t3QuickStart.htm  t3changes.htm
tads3/include/: bignum.h  bytearr.h  charset.h  date.h  dict.h  dynfunc.h  file.h  filename.h  gramprod.h  httpreq.h  httpsrv.h  lookup.h  reflect.h  strbuf.h  strcomp.h  systype.h  t3.h  t3test.h  tads.h  tadsgen.h  tadsio.h  tadsnet.h  vector.h
tads3/lib/: _main.t  file.t  multmeth.t  reflect.t  tadsnet.t  tok.t  webui.t
tads3/lib/adv3/: action.t  actions.t  actor.t  adv3.h  banner.t  browser.t  changes.htm  disambig.t  events.t  exec.t  extras.t  input.t  lister.t  menusys.t  menuweb.t  misc.t  modid.t  objects.t  output.t  parser.t  report.t  score.t  status.t  thing.t  travel.t
tads3/lib/adv3/en_us/: en_us.t  msg_neu.t
tads3/lib/extensions/: CustomStatus.t  combineReports.t
tads3/lib/webuires/: cmdwin.js  main.css  main.htm  main.js  util.js
tads3/samples/: sample.t3m
tads3/test/: readme.txt  test_chr.cpp  test_comp_obj.cpp  test_err.cpp  test_exec.cpp  test_link.cpp  test_obj.cpp  test_pre.cpp  test_prs.cpp  test_prs_top.cpp  test_sort.cpp  test_sym.cpp  test_tok.cpp  test_utf8.cpp  test_write.cpp
tads3/test/data/: bignum.t  builtin.t  bytarr.t  clocktime.t  clone.t  constregex.t  date.t  dirtest.t  embedfmt.t  except.t  files.t  findall.t  findreplace.t  floatfold.t  floatfolderr.t  hashes.t  idxov.t  inlineobj.t  inlineobj1.t  inlineobj2.t  lclvars.t  listmod.t  listprop.t  match.t  namedparam.t  nested_embed.t  nested_embed_err.t  newline_spacing.t  packarr.t  packstr.t  rand3.t  regex.t  rexreplace.t  setmethod.t  sprintf.t  strcomp.t  strcomp3.t  testov.t  tostring.t  vecmod.t  (+1 more)
tads3/unix/: osnetunix.cpp  osnetunix.h
testscripts/: all_make.sh  test_diff  test_diff.sh  test_ex.sh  test_make  test_make.sh  test_pp.sh  test_pre  test_pre.sh  test_restore.sh  test_run.sh
